# algoctf23

./: 1.env  5.py  CTF Event.pptx  FAQ.md  README.md  level0.py  lv1.py  lv2.py  lv3.py  pyproject.toml
4/: 4deploy.py  contract.py  lv4.py
4/artifacts/: application.json  approval.teal  contract.json
6/: 6.py  contract.py  deploy.py
6/artifacts/: application.json  approval.teal  contract.json
7/: 7.py  contract.py  deploy.py
7/artifacts/: application.json  approval.teal  contract.json
