[tool.poetry]
name = "ctf-algokit-solver"
version = "0.1.0"
description = ""
authors = ["CiottiGiorgio <giorgio.ciotti@algorand.foundation>"]
readme = "README.md"
packages = [{include = "ctf_algokit_solver"}]

[tool.poetry.dependencies]
python = "^3.10"
algokit-utils = "^2.1.2"
python-dotenv = "^1.0.0"
beaker-pyteal = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
